fixed gifs to align with maps in mobile max 768

--- a/assets/css/style.prospect.css
+++ b/assets/css/style.prospect.css
@@ -291,7 +291,16 @@ padding: 5px;
       #sidebar {
         width: 100%;
       }
-    
+      #gif1 {
+        position: relative;
+        margin-left: -130px;
+      }
+      
+      #gif {
+        position: relative;
+        margin-left: -130px;
+       
+      }
       #sidebar {
         margin-top: 40px;
       }
@@ -380,6 +389,15 @@ padding: 5px;
         width: 330px;
         height: 380px;
         margin-left: none;
+      }
+      #gif1 {
+        margin-left: 20%;
+        padding: 20px;
+      }
+      
+      #gif {
+        margin-left: -50px;
+        
       }
       .column1{
         
